# hello_wjj

./: stop.txt
dds3.2.2/: README.md  install.sh  uninstall.sh
dds3.2.2/doc/api_reference/: _allowed_network_interface_8hpp_source.html  _annotation_descriptor_8hpp_source.html  _base_status_8hpp_source.html  _binary_property_8hpp_source.html  _blocked_network_interface_8hpp_source.html  _builtin_endpoints_8hpp_source.html  _builtin_transports_8hpp_source.html  _c_d_r_message__t_8hpp_source.html  _cache_change_8hpp_source.html  _cdr_serialization_8hpp_source.html  _chaining_transport_8hpp_source.html  _chaining_transport_descriptor_8hpp_source.html  _change_kind__t_8hpp_source.html  _colors_8hpp_source.html  _condition_8hpp_source.html  _content_filter_property_8hpp_source.html  _content_filtered_topic_8hpp_source.html  _d_d_s_return_code_8hpp_source.html  _d_d_s_return_code_8idl_source.html  _d_d_s_security_return_code_8hpp_source.html  _d_d_s_security_return_code_8idl_source.html  _data_reader_8hpp_source.html  _data_reader_listener_8hpp_source.html  _data_writer_8hpp_source.html  _data_writer_listener_8hpp_source.html  _deadline_missed_status_8hpp_source.html  _domain_participant_extended_qos_8hpp_source.html  _domain_participant_factory_8hpp_source.html  _domain_participant_factory_qos_8hpp_source.html  _domain_participant_listener_8hpp_source.html  _domain_participant_qos_8hpp_source.html  _dynamic_data_8hpp_source.html  _dynamic_data_factory_8hpp_source.html  _dynamic_pub_sub_type_8hpp_source.html  _dynamic_type_8hpp_source.html  _dynamic_type_builder_8hpp_source.html  _dynamic_type_builder_factory_8hpp_source.html  _dynamic_type_member_8hpp_source.html  _endpoint_8hpp_source.html  _endpoint_attributes_8hpp_source.html  (+3426 more)
dds3.2.2/doc/manual/: .buildinfo  objects.inv
docker_dds/: daemon.json
fastdds_examples/: run_demo.sh
fastdds_to_mqtt/: CMakeLists.txt  CloudToVehicle.hpp  CloudToVehicle.idl  CloudToVehicleCdrAux.hpp  CloudToVehiclePubSubTypes.cxx  CloudToVehicleTypeObjectSupport.hpp  build.sh  fastdds_publisher.cpp  fastdds_subscriber.cpp  start_sender.sh  stop_sender.sh
fastdds_to_mqtt/logs/bridge_20250805_183304/: bridge_data.csv
fastdds_to_mqtt/logs/bridge_20250805_184654/: bridge_data.csv
idl/cloud_to_vehicle_dds/: CMakeLists.txt  CloudToVehicleCdrAux.ipp  CloudToVehiclePubSubTypes.cxx  CloudToVehiclePubSubTypes.hpp  CloudToVehicleTypeObjectSupport.cxx  publisher.cpp  subscriber.cpp
idl/timestamp_diff/: CMakeLists.txt  VehicleAck.hpp  VehicleAck.idl  VehicleAckCdrAux.hpp  VehicleAckCdrAux.ipp  VehicleAckPubSubTypes.cxx  VehicleAckPubSubTypes.hpp  VehicleAckTypeObjectSupport.cxx  VehicleAckTypeObjectSupport.hpp  integrated_tester.cpp  timestamp_diff_sender.cpp  vehicle_ack_forwarder.cpp  vehicle_ack_receiver.cpp
mqtt/: analyze_mqtt_test.py  mqtt_receiver.py  mqtt_sender.py
mqtt/logs/receiver_20250805_183309/: receiver_data.csv
mqtt_cpp/: CMakeLists.txt  mqtt_receiver.cpp  mqtt_sender.cpp
mqtt_cpp/logs/receiver_20250731_190036/: receiver_data.csv
mqtt_cpp/logs/receiver_20250731_201917/: receiver_data.csv
mqtt_cpp/logs/sender_20250731_184124/: sender_data.csv
mqtt_cpp/logs/sender_20250731_190044/: sender_data.csv
project_root/: .gitignore  README.md
project_root/demo/: CMakeLists.txt  HelloWorld.hpp  HelloWorldPublisher.cpp  HelloWorldPublisher_2610.cpp  HelloWorldSubscriber.cpp
project_root/fastdds_lib/: CMakeLists.txt  README.md
project_root/fastdds_lib/include/: fastdds_mqtt_publisher.hpp  fastdds_publisher.hpp  fastdds_subscriber.hpp  mqtt_to_fastdds_converter.hpp
project_root/fastdds_lib/src/: fastdds_publisher.cpp  fastdds_subscriber.cpp  mqtt_to_fastdds_converter.cpp
project_root/generated_types/Handshake/: HandshakePubSubTypes.cxx  HandshakeTypeObjectSupport.cxx  HandshakeTypeObjectSupport.hpp
project_root/generated_types/RemoteControl/: RemoteControl.hpp  (+1 more)
project_root/idl/: README.md  TSPCommand.idl
project_root/j6/: J6系统学习文档.md  README.md
project_root/j6/downlink/: CMakeLists.txt  build.sh  run_downlink_system.sh
project_root/j6/downlink/config/: downlink_config.json
project_root/j6/downlink/idl/: RemoteControl.idl  VehicleStatus.idl
project_root/j6/downlink/src/: Handshake.cxx  HandshakePubSubTypes.cxx  RemoteControl.cxx  VehicleStatus.cxx  VehicleStatus.h  VehicleStatusPubSubTypes.h  cloud_mqtt_sender.cpp  mqtt_to_fastdds_bridge.cpp  vehicle_receiver.cpp
project_root/j6/uplink/: AsyncLogger.cpp  CMakeLists.txt  build.sh  run_simulator.sh
project_root/j6/uplink/idl/: Handshake.idl
project_root/j6/uplink/include/: Handshake.h  HandshakePubSubTypes.h  RemoteControl.h  RemoteControlPubSubTypes.h
project_root/j6/uplink/src/: RemoteControl.cxx  RemoteControlPubSubTypes.cxx  VehicleStatus.cxx  VehicleStatusPubSubTypes.cxx  j6_message_receiver.cpp  vehicle_uplink_simulator.cpp
project_root/test/: CMakeLists.txt  README.md  async_logger.hpp  bridge_forwarder  bridge_forwarder.cpp  bridge_forwarder_new.cpp  bridge_forwarder_old.cpp  build.sh  data_processor.cpp  fastdds_to_mqtt_bridge.cpp  mqtt_receiver  mqtt_receiver.cpp  mqtt_sender  mqtt_sender.cpp  mqtt_simulator  mqtt_simulator.cpp  mqtt_to_fastdds_bridge.cpp  publisher.cpp  test_direction2.sh  tsp_forwarder.cpp  启动流程说明.txt  系统学习文档.md
project_root/test/build_fastdds2610/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
project_root/test/mqtt_monitor/: install_monitor_deps.sh  mqtt_excel_monitor.py
python/dds_timestamp_diff_calculator/: ping_client_a.py
test_fastdds_backup/: CMakeLists.txt  Handshake.idl  README.md  RemoteControl.idl  VehicleStatus.idl  build.sh  handshake_publisher.cpp  handshake_subscriber.cpp  mqtt_mosquitto.cpp  remote_control_publisher.cpp  remote_control_subscriber.cpp  start_all.sh  status.sh  stop_all.sh  vehicle_status_publisher.cpp  vehicle_status_subscriber.cpp
zhijiayun/fastdds_lib/: README.md
zhijiayun/generated_types/: README.md
zhijiayun/idl/: TSPCommand.idl
zhijiayun/test/: CMakeLists.txt  build.sh  demo_direction1.sh  mqtt_receiver  mqtt_sender  mqtt_sender.cpp  publisher.cpp  subscriber.cpp
(+221 files in other folders)
